# GPR5300

./: .gitignore  CMakeLists.txt
data/shaders/hello_light/: lightShader.frag  lightShader.vert
data/shaders/hello_phong/: phong.frag  phong.vert
data/shaders/hello_texture/: texture.frag  texture.vert
data/shaders/hello_transform/: transform.frag  transform.vert
include/: camera.h  engine.h  mesh.h  shader.h  texture.h
main/: hello_light.cpp  hello_phong.cpp  hello_texture.cpp  hello_transform.cpp  hello_triangle.cpp
src/: engine.cpp
